@@ -65,25 +65,6 @@ class H5File(DataFile):
 
         return header
 
-    # def allocate(self, shape, data_dtype=None):
-
-    #     if data_dtype is None:
-    #         data_dtype = self.data_dtype
-
-    #     if self.parallel_write:
-    #         self.my_file = h5py.File(self.file_name, mode='w', driver='mpio', comm=comm)
-    #         self.my_file.create_dataset(self.h5_key, dtype=data_dtype, shape=shape)
-    #     else:
-    #         self.my_file = h5py.File(self.file_name, mode='w')
-    #         if self.is_master:
-    #             if self.compression != '':
-    #                 self.my_file.create_dataset(self.h5_key, dtype=data_dtype, shape=shape, compression=self.compression, chunks=True)
-    #             else:
-    #                 self.my_file.create_dataset(self.h5_key, dtype=data_dtype, shape=shape, chunks=True)
-
-    #     self.my_file.close()
-    #     self._read_from_header()
-
     def read_chunk(self, idx, chunk_size, padding=(0, 0), nodes=None):
 
         t_start, t_stop = self._get_t_start_t_stop(idx, chunk_size, padding)
