@@ -1,5 +1,9 @@
 import numpy, re, sys, os, datetime, warnings
+import logging
 from .datafile import DataFile
+from circus.shared.messages import print_and_log
+
+logger = logging.getLogger(__name__)
 
 def atoi(text):
     return int(text) if text.isdigit() else text
@@ -11,6 +15,14 @@ def natural_keys(text):
     (See Toothy's implementation in the comments)
     '''
     return [atoi(c) for c in re.split('(\d+)', text) ]
+
+def filter_per_extension(files, extension):
+    results = []
+    for file in files:
+        fn, ext = os.path.splitext(file)
+        if ext == extension:
+            results += [file]
+    return results
 
 class NeuraLynxFile(DataFile):
 
@@ -29,7 +41,58 @@ class NeuraLynxFile(DataFile):
                           'dtype_offset' : 0,
                           'data_offset'  : NUM_HEADER_BYTES}
 
-    _default_values    = {'pattern' : ''}
+    _default_values    = {'ncs_pattern' : ''}
+
+    def set_streams(self, stream_mode):
+
+        # We assume that all names are in the forms XXXX_channel.ncs
+
+        if stream_mode == 'multi-files':
+            dirname         = os.path.abspath(os.path.dirname(self.file_name))
+            fname           = os.path.basename(self.file_name)
+            fn, ext         = os.path.splitext(fname)
+            tmp_all_files   = os.listdir(dirname)
+            tmp_all_files   = filter_per_extension(tmp_all_files, ext)
+            tmp_all_files.sort(key=natural_keys)
+
+            all_files = []
+            for file in tmp_all_files:
+
+                all_parts = file.split('_')
+                name = '_'.join(all_parts[:-1])
+
+                if self.params['ncs_pattern'] != '':
+                    pattern = name.find(self.params['ncs_pattern']) > 0
+                else:
+                    pattern = True
+
+                if not pattern:
+                    to_consider = False
+                else:
+                    to_consider = True
+
+                for f in all_files:
+                    already_present = '_'.join(f.split('_')[:-1])
+                    if name == already_present:
+                        to_consider = False
+
+                if to_consider:
+                    all_files += ['_'.join([name, all_parts[-1]])]
+
+            sources         = []
+            to_write        = []
+            global_time     = 0
+            params          = self.get_description()
+
+            for fname in all_files:
+                new_data   = type(self)(os.path.join(os.path.abspath(dirname), fname), params)
+                new_data._t_start = global_time
+                global_time += new_data.duration
+                sources     += [new_data]
+                to_write    += ['We found the datafile %s with t_start %s and duration %s' %(new_data.file_name, new_data.t_start, new_data.duration)]
+
+            print_and_log(to_write, 'debug', logger)
+            return sources
 
     def parse_neuralynx_time_string(self, time_string):
         # Parse a datetime object from the idiosyncratic time string in Neuralynx file headers
@@ -52,8 +115,8 @@ class NeuraLynxFile(DataFile):
         all_files = os.listdir(directory)
         alist     = []
         for f in all_files:
-            if self.params['pattern'] != '':
-                test = f.find('.ncs') > 0 and f.find(self.params['pattern']) > 0
+            if self.params['ncs_pattern'] != '':
+                test = f.find('.ncs') > 0 and f.find(self.params['ncs_pattern']) > 0
             else:
                 test = f.find('.ncs') > 0
             if test:
